<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="layoutManager" type="androidx.recyclerview.widget.RecyclerView.LayoutManager" />
        <variable name="adapter" type="io.github.notefydadm.notefy.adapter.UserListAdapter" />
        <variable name="selectedUser" type="String" />
        <variable name="userToAdd" type="String" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layoutManager="@{layoutManager}"
            app:adapter="@{adapter}"/>

        <Button
            android:id="@+id/removeSharedUserButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:enabled="@{selectedUser != null}"
            android:onClick="@{() -> adapter.remove(selectedUser)}"
            android:text="@string/remove_adapter_context" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/shareDialog_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="16dp"
                android:autofillHints=""
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:text="@={userToAdd}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addSharedUserButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/addSharedUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:onClick="@{() -> adapter.add(userToAdd)}"
                android:text="@string/add_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/shareDialog_username"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</layout>